address a variety of form related issues Removes hover states from form elements, closes #868 Rationalizes use of line height and font size in form elements, closes #862 Includes line heights for all --s and --xs form modifiers, closes #855 Changes input and select areas to use box shadow for borders, which aligns them to pixel grid without the need for special cased withs or line heights Adds --xs modifiers to all form elements

--- a/src/buttons.css
+++ b/src/buttons.css
@@ -27,11 +27,11 @@
  */
 .btn {
   display: inline-block;
+  font-weight: bold;
   background-color: var(--default-primary-interactive-color);
   color: var(--white);
   border-radius: 18px; /* fully round by default */
   padding: 6px 12px;
-  font-weight: bold;
   text-align: center;
   transition: background-color var(--transition),
     border-color var(--transition),
@@ -77,8 +77,9 @@
  * <button class='btn btn--s'>Small</button>
  */
 .btn--s {
-  font-size: 12px;
-  padding: 0 12px;
+  font-size: var(--font-size-s);
+  line-height: var(--line-height-s);
+  padding: 3px 12px;
   border-radius: 15px;
 }
 
@@ -90,8 +91,8 @@
  * <button class='btn btn--xs'>Extra small</button>
  */
 .btn--xs {
-  line-height: 18px;
-  font-size: 10px;
+  font-size: var(--font-size-xs);
+  line-height: var(--line-height-xs);
   padding: 0 6px;
   border-radius: 14px;
 }
